// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationBanner - Snapshots > matches snapshot for error variant 1`] = `
<div
  aria-live="assertive"
  class="flex w-full items-center justify-between gap-4 rounded-md border px-4 py-3 text-sm shadow-sm transition-all border-destructive/40 bg-destructive/10 text-destructive dark:bg-destructive/20 dark:text-destructive-foreground"
  role="status"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert h-4 w-4 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <p
      class="font-medium"
    >
      Something failed
    </p>
  </div>
  <div
    class="flex items-center gap-2"
  />
</div>
`;

exports[`NotificationBanner - Snapshots > matches snapshot for offline variant with retry button 1`] = `
<div
  aria-live="polite"
  class="flex w-full items-center justify-between gap-4 rounded-md border px-4 py-3 text-sm shadow-sm transition-all border-amber-400/40 bg-amber-100/60 text-amber-900 dark:bg-amber-500/10 dark:text-amber-200"
  role="status"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-wifi-off h-4 w-4 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 20h.01"
      />
      <path
        d="M8.5 16.429a5 5 0 0 1 7 0"
      />
      <path
        d="M5 12.859a10 10 0 0 1 5.17-2.69"
      />
      <path
        d="M19 12.859a10 10 0 0 0-2.007-1.523"
      />
      <path
        d="M2 8.82a15 15 0 0 1 4.177-2.643"
      />
      <path
        d="M22 8.82a15 15 0 0 0-11.288-3.764"
      />
      <path
        d="m2 2 20 20"
      />
    </svg>
    <p
      class="font-medium"
    >
      You are offline
    </p>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
      data-slot="button"
    >
      Retry
    </button>
  </div>
</div>
`;
